# glob-hasher

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.mjs  index.spec.mjs
__tests__/: index.test.mjs
src/: config.rs  glob.rs  hasher.rs  lib.rs
